--- a/beta/index.html
+++ b/beta/index.html
@@ -139,11 +139,12 @@
                 <div id="productStatusMonth" class="stats-panel__meta"></div>
               </div>
 
+              <!-- 홈 전용: beta-product-grid 구조가 이 안에 들어감 -->
               <div
                 id="ontuProductSection"
-                class="stats-panel__grid stats-panel__grid--products"
+                class="beta-product-section"
               >
-                <!-- home-beta.js에서 도넛 + 우측 박스 렌더링 (beta-product-grid 내부 구조) -->
+                <!-- home-beta.js에서 도넛 + 우측 박스 렌더링 -->
               </div>
             </div>
 
