--- a/beta/index.html
+++ b/beta/index.html
@@ -119,8 +119,13 @@
             <!-- 왼쪽: 대출 현황 -->
             <div class="stats-panel stats-panel--loan">
               <div class="stats-panel__header">
-                <h2 class="stats-panel__title">대출 현황</h2>
-                <div id="loanStatusMonth" class="stats-panel__meta"></div>
+                <div class="stats-panel__header-left">
+                  <div class="stats-panel__suptitle">
+                    <span class="stats-panel__suptitle-main">온라인투자연계금융업</span>
+                    <span id="loanStatusMonth" class="stats-panel__suptitle-meta"></span>
+                  </div>
+                  <h2 class="stats-panel__title">대출 현황</h2>
+                </div>
               </div>
 
               <!-- JS가 카드(.beta-loanstatus-grid)를 렌더링 -->
@@ -136,7 +141,8 @@
             <div class="stats-panel stats-panel--products">
               <div class="stats-panel__header">
                 <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-                <div id="productStatusMonth" class="stats-panel__meta"></div>
+                <!-- 기준월 텍스트는 상단(온라인투자연계금융업 옆)에서만 노출 -->
+                <div id="productStatusMonth" class="stats-panel__meta stats-panel__meta--hidden"></div>
               </div>
 
               <!-- 홈 전용: beta-product-grid 구조가 이 안에 들어감 -->
