--- a/beta/index.html
+++ b/beta/index.html
@@ -110,54 +110,31 @@
         </div>
       </section>
 
-      <!-- 대출현황 + 상품유형별 대출잔액 대시보드 섹션 (A-1 패턴) -->
+      <!-- 통합 대출현황 대시보드 (대표 타이틀 + 5개 카드 구조) -->
       <section class="beta-section">
-        <!-- 회색 밴드 안에 2패널(대출현황 / 상품유형별) 배치 -->
         <div class="beta-section-surface">
 
-          <!-- 상단 공통 타이틀: 온라인투자연계금융업 + 기준월 -->
+          <!-- 대표 타이틀 한 줄 -->
           <div class="beta-dashboard-header">
-            <div class="beta-dashboard-header__left">
-              <span class="beta-dashboard-title">온라인투자연계금융업</span>
-              <span id="dashboardMonth" class="beta-dashboard-month"></span>
-            </div>
+            <h2 class="beta-dashboard-title">
+              <span class="beta-dashboard-title-main">온라인투자연계금융업 대출 현황</span>
+              <span id="dashboardMonth" class="beta-dashboard-title-month"></span>
+            </h2>
           </div>
 
+          <!-- 메인 그리드: 좌측 4장 KPI 카드 / 우측 상품유형별 대출잔액 카드 -->
           <div class="beta-dashboard-grid">
-
-            <!-- 왼쪽: 대출 현황 -->
-            <div class="stats-panel stats-panel--loan">
-              <div class="stats-panel__header">
-                <h2 class="stats-panel__title">대출 현황</h2>
-              </div>
-
-              <!-- JS가 카드(.beta-loanstatus-grid)를 렌더링 -->
-              <div
-                id="ontuLoanStatus"
-                class="stats-panel__grid stats-panel__grid--loan"
-              >
-                <!-- home-beta.js에서 .beta-loanstatus-grid 카드들 렌더링 -->
-              </div>
+            <!-- 왼쪽: 4개 KPI 카드 (렌더링 위치) -->
+            <div class="beta-dashboard-left">
+              <div id="ontuLoanStatus"></div>
             </div>
 
-            <!-- 오른쪽: 상품유형별 대출잔액 -->
-            <div class="stats-panel stats-panel--products">
-              <div class="stats-panel__header">
-                <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-                <!-- 기준월 텍스트는 상단(온라인투자연계금융업 옆)에서만 노출 -->
-                <div id="productStatusMonth" class="stats-panel__meta stats-panel__meta--hidden"></div>
-              </div>
-
-              <!-- 홈 전용: beta-product-grid 구조가 이 안에 들어감 -->
-              <div
-                id="ontuProductSection"
-                class="beta-product-section"
-              >
-                <!-- home-beta.js에서 도넛 + 우측 박스 렌더링 -->
-              </div>
+            <!-- 오른쪽: 상품유형별 대출잔액 카드 (도넛 + 유형별 금액) -->
+            <div class="beta-dashboard-right">
+              <div id="ontuProductSection" class="beta-product-section"></div>
             </div>
-
           </div>
+
         </div>
       </section>
 
