--- a/beta/index.html
+++ b/beta/index.html
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- 베타 홈 전용 JS -->
-  <script type="module" src="/assets/home-beta.js?v=20251206-beta-home"></script>
+  <script type="module" src="/assets/home-beta.js?v=20251211-home"></script>
 </head>
 <body class="beta-body">
 
