--- a/beta/index.html
+++ b/beta/index.html
@@ -21,7 +21,7 @@
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
       <!-- 로고 -->
-      <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
+      <a href="/beta/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
         <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
         <span class="logo-fallback">
           <span class="logo-mark">%</span>
@@ -44,7 +44,7 @@
       <div id="betaMenuPanel" class="beta-menu-panel hide">
         <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
         <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
-        <a class="beta-menu-link" href="/">담보대출 계산기</a>
+        <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
         <a class="beta-menu-link" href="/beta/company.html">회사소개</a>
         <a class="beta-menu-link" href="/beta/contact.html">광고문의</a>
       </div>
