--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -16,7 +16,7 @@
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
       <!-- 로고 -->
-      <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
+      <a href="/beta/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
         <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
         <span class="logo-fallback">
           <span class="logo-mark">%</span>
